--- a/package.json
+++ b/package.json
@@ -22,8 +22,12 @@
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
     "@ng-bootstrap/ng-bootstrap": "^1.0.0-beta.1",
-    "bootstrap": "^3.3.7",
+    "@ngrx/core": "^1.2.0",
+    "@ngrx/store": "^2.2.3",
+    "bootstrap": "^4.0.0-beta",
     "core-js": "^2.4.1",
+    "jquery": "^3.2.1",
+    "popper.js": "^1.12.2",
     "rxjs": "^5.4.1",
     "zone.js": "^0.8.14"
   },
