--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-redux/store": "^6.5.7",
     "@angular/animations": "^4.0.0",
     "@angular/common": "^4.0.0",
     "@angular/compiler": "^4.0.0",
@@ -28,6 +29,8 @@
     "core-js": "^2.4.1",
     "jquery": "^3.2.1",
     "popper.js": "^1.12.2",
+    "redux": "^3.7.2",
+    "redux-devtools-extension": "^2.13.2",
     "rxjs": "^5.4.1",
     "zone.js": "^0.8.14"
   },
